# ufc245-tactical

./: .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INTEGRATION.md  README.md  docker-compose.gpu.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  predictions.db  railway.json  server.js
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
auth/: adapter.js  email.js  index.js
data/: backfill-all-events.js  enrich_seed.js  fighter_images.json  generate_seed.py  parse_events.js  scrape-results.js  scrape-upcoming.js  scrape.js  seed.json  ufc_athlete_images_all.txt
db/: index.js  postgres.js  sqlite.js
llm-pipeline/: Dockerfile  README.md  app.py  cli.py  config.py  pyproject.toml  scheduler.py
llm-pipeline/db/: schema.sql  store.py
llm-pipeline/pipeline/: audit.py  extract.py  lr_runner.py  orchestrator.py  reason.py  sync.py  train.py
llm-pipeline/prompts/: extract.md  reason.md
llm-pipeline/providers/: anthropic.py  base.py  ollama.py  openai.py
llm-pipeline/scrapers/: base.py  news.py  tapology.py  ufc_preview.py
llm-pipeline/tests/: conftest.py  test_audit.py  test_config.py  test_extract.py  test_lr_runner.py  test_orchestrator.py  test_providers.py  test_reason.py  test_scraper_news.py  test_scraper_tapology.py  test_scraper_ufc_preview.py  test_store.py  test_sync.py  test_train.py
llm-pipeline/tests/fixtures/: mmafighting_rss.xml  mmajunkie_article.html  tapology_fighter.html  ufc_event_preview.html
(+127 files in other folders)
